frontend/test/should_fail/delretypesame_002.grg
rule r{	n:Node;		optional {					modify {			delete(n);		}	}		modify {		m:Node<n>;	}}